--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:diamond:avax": "npx hardhat --network mainnet-avax deploy --tags ConfigureDegenX",
     "deploy:diamond:eth": "npx hardhat --network mainnet-eth deploy --tags ConfigureDegenX",
     "deploy:diamond:avax:finalize": "npx hardhat --network mainnet-avax deploy --tags FinalizeDegenX",
+    "deploy:diamond:eth:finalize": "npx hardhat --network mainnet-eth deploy --tags FinalizeDegenX",
     "deploy:atm:eth": "npx hardhat --network mainnet-eth deploy --tags DeployDegenATM",
     "deploy:launcher:eth": "npx hardhat --network mainnet-eth deploy --tags DeployLaunchProtocol",
     "coverage": "USE_REAL_ACCOUNTS=false npx hardhat coverage",
